--- a/gallery.html
+++ b/gallery.html
@@ -122,6 +122,9 @@
               <div class="swiper-slide ">
                 <img src="https://media.discordapp.net/attachments/959706637952778270/960469084833714186/IMG20220328182436.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/986247360906678302/photo_2022-06-14_19-30-59.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
+              </div>
               <!-- End Insert Image -->
             </div>
             <div class="swiper-pagination mt-2"></div>
