--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tailwind/output.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -104,17 +103,15 @@
             </div>
             <div class="swiper-wrapper mt-16 lg:mt-20 z-40">
               <!-- Slides 1 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753471009726474/1.png?width=1920&height=1080" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/971461506703171614/1.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 2 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960756205880475678/Group_64.png?width=1920&height=1080" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/971461517285412934/2.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 3 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753507252727838/3.png?width=1920&height=1080" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/971461524650598403/3.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 4 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753517008674856/4.png?width=1920&height=1080" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/971461543382360154/4.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 5 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753912992907334/5.png?width=1920&height=1080" alt=""></div>
-              <!-- Slide 6 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753925714247750/6.png?width=1920&height=1080" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/971461551510941746/5.png?width=1920&height=1080" alt=""></div>
 
             </div>
             <!-- If we need pagination -->
@@ -155,12 +152,12 @@
                 <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="w-full grid lg:grid-rows-1 md:grid-rows-1 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col mt-10 lg:mt-24">
+                <div class="w-full grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row mt-10 lg:mt-24">
 
                     <!-- Palm Sugar -->
-                    <div class="lg:ml-36 hover:scale-125 duration-300">
+                    <div class="lg:ml-36 lg:hover:scale-110 duration-300">
                         <!-- Gambar Product -->
-                        <img src="https://media.discordapp.net/attachments/955815606274367518/960560561412771850/1.jpg?width=1080&height=1080" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <img src="https://media.discordapp.net/attachments/955815606274367518/966252935518511144/IMG-1310.jpg?width=1200&height=1080" alt="" class="h-72 m-auto rounded-xl sm:rounded-xl px-3 lg:px-0">
                         <!-- Deskripsi Product -->
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Organic Palm <br> Sugar</h1>
                         <div class="w-72 m-auto bg-white">
@@ -174,9 +171,9 @@
                     </div>
 
                     <!-- Coffee Powder -->
-                    <div class="hover:scale-125 duration-300">
+                    <div class="lg:hover:scale-110 duration-300">
                         <!-- Gambar Product -->
-                        <img src="https://media.discordapp.net/attachments/959680381894950932/959680415604568084/powder1.jpg?width=676&height=676" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <img src="https://media.discordapp.net/attachments/959680381894950932/966253095489269760/IMG-1297.jpg?width=1200&height=1080" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
                         <!-- Deskripsi Product -->
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Roasted Ground<br> Coffee</h1>
                         <div class="w-72 m-auto bg-white">
@@ -190,9 +187,9 @@
                     </div>
 
                     <!-- Coffee Roasting -->
-                    <div class="lg:mr-36 hover:scale-125 duration-300">
+                    <div class="lg:mr-36 lg:hover:scale-110 duration-300">
                         <!-- Gambar Product -->
-                        <img src="https://media.discordapp.net/attachments/958961868863598612/959656683636944956/Kopi1.jpg?width=676&height=676" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <img src="https://media.discordapp.net/attachments/958961868863598612/966253150891835422/IMG-1306.jpg?width=1200&height=1080" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
                         <!-- Deskripsi Product -->
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Roasted Coffee <br> Beans</h1>
                         <div class="w-72 m-auto bg-white">
@@ -204,6 +201,39 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- Green Beans Arabica-->
+                    <div class="lg:ml-36 lg:hover:scale-110 duration-300 lg:mt-5">
+                        <!-- Gambar Product -->
+                        <img src="https://media.discordapp.net/attachments/985908374577238046/985909210762072155/Green_bean.jpg" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Sumatra Arabica<br> Coffee Beans</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Gayo Arabica Coffee’s entry to the world commodity market is due <span class="text-blackText">to its highly</span> <span class="text-gray-300"> valued, typical flavor... </span></p>
+                            <a href="/greenBeansArabica.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Green Beans Robusta-->
+                    <div class="lg:hover:scale-110 duration-300 lg:mt-5">
+                        <!-- Gambar Product -->
+                        <img src="https://media.discordapp.net/attachments/985908374577238046/985908604525740052/pexels-michael-burrows-7125599.jpg?width=1200&height=1080" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Sumatra Robusta<br> Coffee Beans</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Sidikalang Robusta coffee is planted in Bukit Barisan area, Sidikalang region <span class="text-gray-300">North Sumatra. </span> <span class="text-gray-300">The... </span></p>
+                            <a href="/greenBeansRobusta.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    
 
                     <!-- ------------------------------------------Product belum dipake--------------------------------------------------- -->
 
