--- a/coffeePowder.html
+++ b/coffeePowder.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tailwind/output.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -87,6 +86,8 @@
                 <a href="/palmsSugar.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Organic Palm Sugar</a>
                 <a href="/coffeePowder.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Roasted Ground Coffee</a>
                 <a href="/coffee.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Roasted Coffee Beans</a>
+                <a href="/greenBeansArabica.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Sumatra Arabica Coffee Beans</a>
+                <a href="/greenBeansRobusta.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Sumatra Robusta Coffee Beans</a>
             </div>
 
             
@@ -97,11 +98,11 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper ">
                           <!-- Slide 1 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/959680415604568084/powder1.jpg?width=676&height=676" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/966253095489269760/IMG-1297.jpg?width=1080&height=1080" alt=""></div>
                           <!-- Slide 2 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/960427836412407829/7.png" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/966253094499409920/IMG-1294.jpg?width=1080&height=1080" alt=""></div>
                           <!-- Slide 3 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/960427837049962506/5.png" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/959680381894950932/966253095115948042/IMG-1296.jpg?width=1080&height=1080" alt=""></div>
                         </div>            
                     </div>
                 </div>
@@ -151,7 +152,7 @@
                     <!-- Spesification 4 -->
                     <div class="flex items-center lg:mt-9 my-6">
                         <img src="https://media.discordapp.net/attachments/938023978906300446/938024038666764308/Group_52.png" alt="" class="pr-5 w-20 lg:w-auto hover:scale-110 duration-300">
-                        <p><span class="text-black font-normal">Minimum Order </span>LCL 500 Kilograms</p>
+                        <p><span class="text-black font-normal">Minimum Order </span>LCL 100 Kilograms</p>
                     </div>  
 
                 </div>
