--- a/palmsSugar.html
+++ b/palmsSugar.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tailwind/output.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -87,6 +86,8 @@
                 <a href="/palmsSugar.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Organic Palm Sugar</a>
                 <a href="/coffeePowder.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Roasted Ground Coffee</a>
                 <a href="/coffee.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Roasted Coffee Beans</a>
+                <a href="/greenBeansArabica.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Sumatra Arabica Coffee Beans</a>
+                <a href="/greenBeansRobusta.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Sumatra Robusta Coffee Beans</a>
             </div>
 
             
@@ -97,13 +98,13 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper ">
                           <!-- Slides 1 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/960560561995796491/2.jpg?width=1080&height=1080" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/966252936135061534/IMG-1313.jpg?width=1080&height=1080" alt=""></div>
                           <!-- Slide 2 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/960560561412771850/1.jpg?width=1080&height=1080" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/966252935212310528/IMG-1308.jpg?width=1080&height=1080" alt=""></div>
                           <!-- Slide 3 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/960560562423619615/3.jpg?width=1080&height=1080" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/966252936432861204/IMG-1314.jpg?width=1080&height=1080" alt=""></div>
                           <!-- Slide 4 -->
-                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/960560562809487471/4.jpg?width=1080&height=1080" alt=""></div>
+                          <div class="swiper-slide cursor-default"><img class="object-center object-cover lg:w-96 lg:h-96 md:w-72 md:h-72 w-60 h-60 m-auto rounded-2xl cursor-default" src="https://media.discordapp.net/attachments/955815606274367518/966252934713180180/IMG-1316.jpg?width=1080&height=1080" alt=""></div>
                         </div>            
                     </div>
                 </div>
