Ganti foto green bean arabika robusta

--- a/termsAndCondition.html
+++ b/termsAndCondition.html
@@ -130,7 +130,7 @@
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-montserrat font-bold lg:text-3xl text-xl py-4">Price Terms</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p >Available price term is FOB, CIF, and CNF.</p>
+                            <p >Available price term is FOB.</p>
                         </div>
                     </div>
             </div>
