menambahkan our market di about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -264,6 +264,18 @@
                     </div>
                 </div>
 
+                <!-- Our Market -->
+                <div class="w-full h-full lg:mt-36 mt-16 mb-6 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Our Market</div>
+
+                <div class="w-full">
+                    <img src="/assets/img/our_market.svg" class="w-3/4 m-auto">
+                    <div class="text-sm lg:text-lg font-poppins font-normal text-black lg:pt-16 lg:px-96 px-6 text-justify lg:text-center">
+                        From Indonesia to the world, Adaro Agro has distributed several products to different countries. Full comitment to quality and customer satisfaction 
+                        is our top priority which we intent to grow every day
+                    </div>
+                </div>
+
+
                 <!-- Btn Collaborate -->
                 <div class="w-full absolute lg:mt-44 mt-16 ">
                     <div>
